Add Tailwind CSS configuration and update dependencies
- Created tailwind.config.js for Tailwind CSS setup
- Added axios, dotenv, react-hook-form, and updated yup in package.json
- Included .env in .gitignore
- Cleaned up index.css by removing unnecessary styles
- Reformatted imports in index.tsx for consistency

--- a/package.json
+++ b/package.json
@@ -11,17 +11,28 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.2",
+    "axios": "^1.8.4",
+    "dotenv": "^16.4.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.55.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.6.1"
+  },
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^9.0.2",
+    "tailwindcss": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "nuke": "rm -rf node_modules && rm -rf package-lock.json && npm install"
   },
   "eslintConfig": {
     "extends": [
