--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "react-hook-form": "^7.55.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/react-router-dom": "^5.3.3",
-    "@types/uuid": "^9.0.2",
+    "@types/uuid": "^9.0.8",
     "tailwindcss": "^3.3.3"
   },
   "scripts": {
