--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^9.0.8",
+    "react-router": "^7.5.0",
+    "react-router-dom": "^7.5.0",
     "tailwindcss": "^3.3.3"
   },
   "scripts": {
